[feat]upgrade package and remove idempotent
