# api/auth/auth.pb.validate.go
@@ -1919,108 +1919,6 @@ var _ interface {
 	ErrorName() string
 } = InfoReplyValidationError{}
 
-// Validate checks the field values on IdempotentReply with the rules defined
-// in the proto definition for this message. If any rules are violated, the
-// first error encountered is returned, or nil if there are no violations.
-func (m *IdempotentReply) Validate() error {
-	return m.validate(false)
-}
-
-// ValidateAll checks the field values on IdempotentReply with the rules
-// defined in the proto definition for this message. If any rules are
-// violated, the result is a list of violation errors wrapped in
-// IdempotentReplyMultiError, or nil if none found.
-func (m *IdempotentReply) ValidateAll() error {
-	return m.validate(true)
-}
-
-func (m *IdempotentReply) validate(all bool) error {
-	if m == nil {
-		return nil
-	}
-
-	var errors []error
-
-	// no validation rules for Token
-
-	if len(errors) > 0 {
-		return IdempotentReplyMultiError(errors)
-	}
-
-	return nil
-}
-
-// IdempotentReplyMultiError is an error wrapping multiple validation errors
-// returned by IdempotentReply.ValidateAll() if the designated constraints
-// aren't met.
-type IdempotentReplyMultiError []error
-
-// Error returns a concatenation of all the error messages it wraps.
-func (m IdempotentReplyMultiError) Error() string {
-	var msgs []string
-	for _, err := range m {
-		msgs = append(msgs, err.Error())
-	}
-	return strings.Join(msgs, "; ")
-}
-
-// AllErrors returns a list of validation violation errors.
-func (m IdempotentReplyMultiError) AllErrors() []error { return m }
-
-// IdempotentReplyValidationError is the validation error returned by
-// IdempotentReply.Validate if the designated constraints aren't met.
-type IdempotentReplyValidationError struct {
-	field  string
-	reason string
-	cause  error
-	key    bool
-}
-
-// Field function returns field value.
-func (e IdempotentReplyValidationError) Field() string { return e.field }
-
-// Reason function returns reason value.
-func (e IdempotentReplyValidationError) Reason() string { return e.reason }
-
-// Cause function returns cause value.
-func (e IdempotentReplyValidationError) Cause() error { return e.cause }
-
-// Key function returns key value.
-func (e IdempotentReplyValidationError) Key() bool { return e.key }
-
-// ErrorName returns error name.
-func (e IdempotentReplyValidationError) ErrorName() string { return "IdempotentReplyValidationError" }
-
-// Error satisfies the builtin error interface
-func (e IdempotentReplyValidationError) Error() string {
-	cause := ""
-	if e.cause != nil {
-		cause = fmt.Sprintf(" | caused by: %v", e.cause)
-	}
-
-	key := ""
-	if e.key {
-		key = "key for "
-	}
-
-	return fmt.Sprintf(
-		"invalid %sIdempotentReply.%s: %s%s",
-		key,
-		e.field,
-		e.reason,
-		cause)
-}
-
-var _ error = IdempotentReplyValidationError{}
-
-var _ interface {
-	Field() string
-	Reason() string
-	Key() bool
-	Cause() error
-	ErrorName() string
-} = IdempotentReplyValidationError{}
-
 // Validate checks the field values on Permission with the rules defined in the
 // proto definition for this message. If any rules are violated, the first
 // error encountered is returned, or nil if there are no violations.
